# nearclip

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_RULES.md  README.md  STRUCTURE.md  USER_STORIES.md  ble_test_demo.kt  build-android.sh  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts  test-commands.md  window_dump.xml
crates/nearclip-ble/: Cargo.toml
crates/nearclip-ble/src/: central.rs  central_data.rs  chunk.rs  controller.rs  error.rs  gatt.rs  lib.rs  peripheral.rs  peripheral_data.rs
crates/nearclip-ble/tests/: ble_advertise_integration.rs  ble_central_data_integration.rs  ble_data_transfer_integration.rs  ble_scan_integration.rs
crates/nearclip-core/: Cargo.toml
crates/nearclip-core/src/: config.rs  device.rs  error.rs  history.rs  lib.rs  logging.rs  manager.rs
crates/nearclip-core/tests/: manager_integration.rs
crates/nearclip-crypto/: Cargo.toml
crates/nearclip-crypto/src/: cipher.rs  device_store.rs  keypair.rs  lib.rs  pairing.rs  qrcode_parser.rs  tls_config.rs
crates/nearclip-crypto/tests/: device_store_integration.rs  pairing_flow_integration.rs  pairing_qrcode_integration.rs  tls_integration.rs
crates/nearclip-device/: Cargo.toml
crates/nearclip-device/src/: error.rs  lib.rs  manager.rs  models.rs  pairing.rs  store.rs
crates/nearclip-device/tests/: pairing_integration.rs
crates/nearclip-ffi/: Cargo.toml  build.rs  uniffi.toml
crates/nearclip-ffi/src/: ble_hardware_bridge.rs  ble_recv_task.rs  lib.rs  nearclip.udl  uniffi_bindgen.rs
crates/nearclip-ffi/tests/: error_handling_tests.rs  smoke_tests.rs  type_conversion_tests.rs
crates/nearclip-ffi/tests/common/: mock_callback.rs  mod.rs
crates/nearclip-net/: Cargo.toml
crates/nearclip-net/src/: error.rs  lib.rs
crates/nearclip-net/src/mdns/: advertise.rs  discovery.rs  mod.rs
crates/nearclip-net/src/tcp/: client.rs  connection.rs  mod.rs  server.rs
crates/nearclip-net/tests/: mdns_advertise_integration.rs  mdns_discovery_integration.rs  tcp_client_integration.rs  tcp_server_integration.rs
crates/nearclip-sync/: Cargo.toml
crates/nearclip-sync/src/: channel.rs  lib.rs  loop_guard.rs  monitor.rs  protocol.rs  receiver.rs  retry.rs  sender.rs  switcher.rs
crates/nearclip-sync/tests/: channel_monitor_integration.rs  channel_switcher_integration.rs  clipboard_receive_integration.rs  clipboard_send_integration.rs  loop_guard_integration.rs  retry_integration.rs
crates/nearclip-transport/: Cargo.toml  README.md
crates/nearclip-transport/benches/: transport_bench.rs
crates/nearclip-transport/crates/nearclip-transport/tests/: ble_encryption.rs
crates/nearclip-transport/crates/nearclip-transport/tests/common/: mock_ble_transport.rs  mod.rs
crates/nearclip-transport/src/: ble.rs  encrypted.rs  error.rs  lib.rs  manager.rs  mock.rs  traits.rs  wifi.rs
crates/nearclip-transport/tests/: ble_encryption.rs  failover.rs
crates/nearclip-transport/tests/common/: mock_ble_transport.rs
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/device/: capability.rs  device.rs  mod.rs  status.rs  type.rs
rust-core/src/discovery/: config.rs  event.rs  mod.rs  trait.rs
rust-core/tests/: device.rs  lib.rs
rust-core/tests/common/: mod.rs
src/platform/android/app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
src/platform/android/app/src/main/: AndroidManifest.xml
src/platform/android/app/src/main/cpp/: jni_bridge.h  jni_callbacks.cpp  nearclip_jni.cpp
src/platform/android/app/src/main/java/com/nearclip/: MainActivity.kt  NearClipApplication.kt
src/platform/android/app/src/main/java/com/nearclip/core/: NearClipCore.kt
src/platform/android/app/src/main/java/com/nearclip/data/database/: NearClipDatabase.kt
src/platform/android/app/src/main/java/com/nearclip/data/model/: Device.kt
src/platform/android/app/src/main/java/com/nearclip/data/network/: NearClipApi.kt
src/platform/android/app/src/main/java/com/nearclip/data/protocol/: ProtocolExtensions.kt  ProtocolHandler.kt
src/platform/android/app/src/main/java/com/nearclip/data/repository/: DeviceRepository.kt  DeviceRepositoryImpl.kt
src/platform/android/app/src/main/java/com/nearclip/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt
src/platform/android/app/src/main/java/com/nearclip/ffi/: JniCallbacks.kt  JniLoader.kt  NearClipFFI.kt  NearClipNativeBridge.kt  NearClipService.kt  SecureFFIWrapper.kt
src/platform/android/app/src/main/java/com/nearclip/jni/: NearClipJNI.kt
src/platform/android/app/src/main/java/com/nearclip/presentation/viewmodel/: BaseViewModel.kt  NearClipViewModel.kt
src/platform/android/app/src/main/java/com/nearclip/services/: PermissionManager.kt  PermissionRequestHandler.kt
src/platform/android/app/src/main/java/com/nearclip/ui/theme/: Color.kt  (+2 more)
src/platform/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/platform/android/app/src/test/: ExampleUnitTest.kt
src/platform/android/app/src/test/errorhandling/: ErrorHandlingTest.kt
src/platform/android/app/src/test/ffi/: SecureFFIWrapperTest.kt
src/platform/android/app/src/test/integration/: FFISecurityIntegrationTest.kt
src/platform/android/app/src/test/java/com/nearclip/ble/: BleManagerIntegrationTest.kt  BleScannerTest.kt  DeviceDiscoveryListenerTest.kt  PerformanceBenchmarkTest.kt  ProtocolBufferConsistencyTest.kt
src/platform/android/app/src/test/performance/: FFIPerformanceTest.kt
src/platform/android/app/src/test/repository/: DeviceRepositoryTest.kt
src/platform/android/app/src/test/ui/screens/: HomeScreenTest.kt
src/platform/android/app/src/test/util/: MainDispatcherRule.kt
src/platform/android/app/src/test/viewmodel/: NearClipViewModelTest.kt
src/shared/rust/: Cargo.toml  build.rs
src/shared/rust/src/: data_sync.rs  device.rs  device_discovery.rs  error.rs  error_handling.rs  lib.rs  sync.rs  utils.rs
src/shared/rust/src/protocol/: common.rs  discovery.rs  error_handling_test.rs  mod.rs  mod_test.rs  pairing.rs  security_test.rs  sync.rs  version_compatibility_test.rs
(+495 files in other folders)
