[package]
name = "nearclip-core"
version = "0.1.0"
edition = "2021"
authors = ["NearClip Team"]
description = "Core library for NearClip - cross-device clipboard synchronization"
license = "MIT"
repository = "https://github.com/nearclip/nearclip"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.5"
proptest = "1.0"