[package]
name = "nearclip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core coordination layer for NearClip - main API and device management"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
base64.workspace = true
nearclip-crypto.workspace = true
nearclip-net.workspace = true
nearclip-ble.workspace = true
nearclip-sync.workspace = true
nearclip-transport.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
tracing-android.workspace = true
