[package]
name = "nearclip-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FFI bindings for NearClip - uniffi exports for Swift/Kotlin"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "nearclip_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
base64 = "0.21"
thiserror.workspace = true
tracing.workspace = true
uniffi = { workspace = true, features = ["cli"] }
nearclip-core.workspace = true
nearclip-crypto.workspace = true
nearclip-transport.workspace = true
nearclip-sync.workspace = true
nearclip-ble.workspace = true
tokio.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
