[package]
name = "nearclip-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Network layer for NearClip - mDNS discovery, TCP/TLS communication"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
mdns-sd.workspace = true
nearclip-crypto.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
