[package]
name = "nearclip-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Synchronization protocol for NearClip - message format, channel selection"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
nearclip-crypto.workspace = true
nearclip-net.workspace = true
nearclip-ble.workspace = true
