[package]
name = "nearclip-core"
version = "0.1.0"
edition = "2021"
authors = ["NearClip Team"]
description = "NearClip core functionality for cross-platform clipboard synchronization"
license = "MIT"
repository = "https://github.com/nearclip/nearclip"

[lib]
name = "nearclip"
crate-type = ["cdylib", "rlib"] # 同时支持动态库和静态库

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
prost = "0.12"
prost-types = "0.12"

# 加密
ring = "0.17"
base64 = "0.21"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 随机数
rand = "0.8"

# 并发
crossbeam = "0.8"

# FFI
libc = "0.2"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MD5 哈希
md5 = "0.7"

[build-dependencies]
prost-build = "0.12"

[features]
default = ["std"]
std = []

# 目标特定配置
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
# core-foundation = "0.9"
# core_bluetooth = "0.1"  # 暂时注释掉，在原型阶段不需要

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "nearclip-test"
path = "src/bin/test.rs"